# solpay-blockchain-service

./: .env.example  Cargo.toml  Dockerfile  README.Docker.md  README.md  docker-compose.yaml
.github/workflows/: docker-publish.yml
src/: lib.rs  main.rs  worker.rs
src/application/services/: health_service.rs  mod.rs
src/application/use_cases/: mod.rs  process_message.rs
src/core/config/: config.rs
src/core/handler/: health.rs
src/domain/: health.rs
src/domain/entities/: message.rs
src/domain/errors/: mod.rs
src/domain/ports/: message_consumer.rs  message_handler.rs  mod.rs
src/handler/: health_handler.rs  mod.rs
src/infrastructure/: config.rs  mod.rs
src/infrastructure/rabbitmq/: consumer.rs
src/modules/: mod.rs
src/modules/health/: health_handler.rs
src/modules/mq/: mod.rs  mq.rs
src/modules/worker/: worker.rs
src/presentation/http/: handlers.rs  server.rs
src/routes/: health_route.rs  mod.rs  route.rs
src/server/: mod.rs  server.rs
src/service/: health_service.rs
