[package]
name = "solpay-blockchain-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
bincode = "1.3"
base64 = "0.21"
bs58 = "0.5.1"
dotenvy = "0.15.7"
futures-util = "0.3.31"
lapin = { version = "4.0.0", features = ["rustls"] }
serde = "1.0.228"
serde_json = "1.0.149"
solana-client = "3.1.8"
solana-sdk = "4.0.0"
tokio = { version = "1.49.0", features = ["full"] }
tokio-executor-trait = "3.1.0"
